Test Scope platform

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
   global:
     # Disable Oracle in the cloud
     - FROM_TRAVIS=true
+    - SCOPE_DSN=https://c4f518de879e4811a73e32318f94feb1@app.scope.dev/
     
 addons:
   sonarcloud:
